# ml-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_name }}/: .gitignore
{{ cookiecutter.repo_name }}/: README.md  pyproject.toml
