[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["Milan Jain <milanjain81@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "code/src" }]  # Ensures your src/ code is installable

[tool.poetry.dependencies]
python = "^3.10"

# --- Core scientific stack ---
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.5"
scipy = "^1.14"

# --- Visualization & EDA ---
matplotlib = "^3.9"
seaborn = "^0.13"
plotly = "^5.24"

# --- Config, experiment management, tracking ---
hydra-core = "^1.3"
omegaconf = "^2.3"
mlflow = "^2.15"
optuna = "^3.6"

# --- Data & pipeline tools ---
dvc = "^3.50"
pyyaml = "^6.0"

# --- Utilities ---
tqdm = "^4.66"
joblib = "^1.4"

# Optional but handy
ipykernel = "^6.29"
jupyterlab = "^4.2"

[tool.poetry.group.dl.dependencies]
# Deep Learning optional layer
torch = "^2.3"
torchvision = "^0.18"
pytorch-lightning = "^2.4"
transformers = "^4.43"
datasets = "^3.0"
accelerate = "^0.32"

[tool.poetry.group.dev.dependencies]
# Dev / testing tools
pytest = "^8.3"
black = "^24.3"
flake8 = "^7.1"
isort = "^5.13"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"